Uploading div is now using overflow-y correctly and it is back to it was before.

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -12,9 +12,12 @@ html, body {
 	width: 150px;
 	position: absolute;
 	right: 0;
-	/* These rules for file uploads */
+}
+
+.uploading {
 	height: 100%;
 	overflow-y: auto;
+	background: 1px solid red;
 }
 
 .chat-div {
